2009-07-19  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/lightning/content/imip-bar.js: show a spinning
	wheel until the proper message and buttons can be displayed. The
	"requiresNetwork" property is not available on caldav calendars.
	Therefore we only test for the calendar type for updating them.
	Fixed exceptions occuring with CANCEL and REPLY messages.

	* src/calendar/lightning/content/imip-bar-overlay.xul: extracted
	file for further modifications.

2009-07-17  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/src/calCachedCalendar.js: commented out the
	update timer for cached calendars, since the timer for the views
	already achieves the same effect.

	* src/calendar/lightning/content/imip-bar.js: make better use of
	the CalDAV acls. Ensure the calendars are updated before searching
	the related event.

2009-07-15  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/content/calendar-ui-utils.js: extracted file
	for further modification
	(appendCalendarItems) add a "tooltiptext" to the calendar menu
	items for large calendar names.

	* src/calendar/base/content/sun-calendar-event-dialog.xul: (new
	file) assigned "id" field and value to the status bar privacy
	labels.

2009-07-09  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/src/calDavCalendar.js: it may happen that ACL
	are loaded before the refresh starts. In that case, we used to
	wait indefinitely for the a notification that has already passed.
	This is now fixed.

	* src/calendar/base/content/calendar-task-editing.js: check the
	value of getSelectedCalendar() to avoid exceptions on null values.

2009-07-08  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/src/calDavCalendar.js: webdav sync handler: we
	trigger the "endBatch" event BEFORE the finalization of the
	update to avoid locking problems in the cache database.
	Also, we don't need to test for the presence of the